Fixed spacing on smaller screens.

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
 }
 
 html, body{
+	 box-sizing: border-box;
 	margin:0;
 	padding:0;
 	height: 100%; 
@@ -48,11 +49,15 @@ h2{
 }
 
 .headerSpace{
-	width: 100%;
+	
 	height: 85px;
+	width: 100%;
 	text-align: center;
 	vertical-align: middle;
 	line-height: 90px; 	
+	margin:0px;
+	padding: 0px;
+	min-width: 1300px;
 }
 
 .box {
@@ -97,6 +102,7 @@ a:visited {
 	text-align: center;
 	background:var(--bioColor);
 	width:100%;
+	min-width: 1300px;
 }
 
 .bioContainer{
@@ -123,7 +129,7 @@ a:visited {
 	display: block;
 	float:left;
 	text-align: center;
-		overflow:auto;
+	overflow:auto;
 }
 
 .projectContainer{
@@ -151,6 +157,7 @@ a:visited {
 	text-align: center;
 	font-size: 20px;
 	background:var(--contactColor);
+	min-width: 1300px;
 }
 
 .clear{
